--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 17: Could You Be Loved - Bob Marley & The Wailers
+          Week 18: Sweet Life - Frank Ocean
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.8/10</h2>
+            <h2 id="rating">Overall Rating: 9.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5O4erNlJ74PIF6kGol1ZrC?si=e152c541efe1409c"
+                    href="https://open.spotify.com/track/6MEDfjHxnVNcYmHe3mM6L2?si=ce62e374f61b42c4"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=g3t6YDnGXAc"
+                    href="https://www.youtube.com/watch?v=y14F2RQW7h4"
                     target="_blank"
                     ><center>
                       <img
@@ -113,37 +113,52 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              My favorite part of this song isn't so much part of the song at
-              all. Bob Marley's energy brought to every song makes him the
-              undisputed master of Reggae. For my purposes, the tropicality of
-              this song alone makes it my Song of the Week this week.
+              Those first five claps before the song starts bring me boundless
+              joy and eagerness for the inbounding masterpiece from one of my
+              favorite artists of all time! I also think the genius of "why see
+              the world, when you got the beach" is an unparalleled line
+              compared to any other hook I've ever heard.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This track from Bob Marley's 1980 album "Uprising" is one of his
-              most well known and admired songs for good reason. The infectious
-              yet rather simple conjuction of snappy percussions are easy to the
-              ear, I could listen to this song on repeat for a whole beach day.
-              Aloha from the big island! Make the best of this week and give
-              this song a listen.
+              A 9.8?!?! My second favorite song from Frank Ocean's debut album
+              "Channel Orange" claims the top-rated SotW for now. Of course, I
+              rate it this way with good reason and levelheadedness. Sonically,
+              this song is amazing, yet so is every other song delivered by this
+              amazing record. The lyricism sets this track apart from the rest
+              for me, however. Frank attacks the "Sweet Life", a way of living
+              accessible by only the upper class. He paints the differences
+              between this life and his own through the first notably calmer
+              verse. We then get to the part of the chorus quoted above. "See
+              the world" is a phrase most popularly attributed to traveling,
+              which gives a base-level meaning that there is no need to travel
+              when you are living the "Sweet Life" and will not know of the
+              differences in the world because of it. The phrase could also
+              extend "see" to mean "perceive" or "understand", referring more to
+              a world blindness of the upper class. I could go on and on about
+              this song (I've only talked about the first 1.5 minutes), but
+              ultimately listen to this song and you will understand that the
+              sweet life is not what it's cracked up to be. Find the best song
+              on an album, immerse yourself in your life, and make the best of
+              your week. Until next time.
             </p>
           </div>
         </div>
-        <div id="celebSotW" hidden>
+        <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Lauren Rappa: Timefighter - Lucy Dacus
+            Dallin Corless: Everything is Embarrassing - Sky Ferreira
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.9/10</h2>
+              <h2 id="rating">Overall Rating: 9.4/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7c9srBkFoHv13JZaQlachO?si=4e856f9129044228"
+                    href="https://open.spotify.com/track/70v5mCvyPRquTyU7qTIU81?si=844341a000844f38"
                     target="_blank"
                     ><center>
                       <img
@@ -157,7 +172,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=FdCVwE8tpLs"
+                    href="https://www.youtube.com/watch?v=rEamE0MYPkg"
                     target="_blank"
                     ><center>
                       <img
@@ -174,27 +189,27 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I can so vividly remember the first time I heard this song and how
-            immediately taken I was with it. I love Lucy Dacus’ music so much
-            because I find her to be a very comforting presence. I believe that
-            she is one of the greatest lyricists of our generation, and my
-            personal favorite. Her voice is so soothing and beautiful. One of my
-            favorite things about her music is how well she is able to perfectly
-            curate specific vibes and feelings for each of her songs and albums
-            as a whole cohesive piece. Her second album, Home Video, has a very
-            nostalgic feeling. This album, Historians, has a very dark vibe that
-            I really enjoy listening to. I think this is the best on the album
-            because of how much of an out of body experience listening is for
-            me. It discusses time passing and the feeling of trying to fight
-            against the fleeting moments we have, and the inability of humans to
-            stop the passage of time. The way that the song's pace increases
-            tension and builds the feeling of anxiety that comes with the fear
-            of aging and missing moments is so visceral, and is such a good
-            representation of our lack of control of existence and its
-            impermanence. That paired with the building intensity of the guitar
-            and vocals is incredible. I find this song perfect to be honest but
-            I was afraid to give it a 10/10 so I took it back to a 9.9 just to
-            leave room.
+            This song has been a favorite of mine for a while and I would give
+            it a 10/10 honestly, except the visuals and vocals are nothing
+            exceptional (although the video reportedly had no budget). Strictly
+            the song however, it’s perfection. Production-wise, it somehow
+            sounds both slightly industrial and late 2010s-indie/bedroom pop at
+            the same time; it’s almost reminiscent of SZA’s “Hit Different” but
+            with a lesser RnB feel. Lyrically this song achieves what I consider
+            to be a perfect balance, feeling both specific and meaningful to the
+            artist while also being open to individual interpretation. The
+            events Sky Ferreira herself experienced to write this song are
+            clearly being chronicled here, yet the lyrics are relatable enough
+            that there is more meaning to be gleaned from them upon further
+            listens as we project our own experiences onto them. The New York
+            Times described it as “counterintuitive and brilliant,” I couldn’t
+            agree more. It succeeds at everything a song could hope to achieve
+            all at once. The bridge after the second verse in particular is some
+            of the most beautiful lyricism and performance I’ve ever heard. I
+            would say this song is pretty experimental, especially considering
+            its initial release in 2012. That being the case, I encourage giving
+            it a few listens before a final judgment to let its intricacies
+            really shine!
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -284,6 +299,11 @@
               <td>16</td>
               <td>No L's - Smino</td>
               <td>8.1/10</td>
+            </tr>
+            <tr>
+              <td>17</td>
+              <td>Could You Be Loved - Bob Marley & The Wailers</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
