--- a/songs.html
+++ b/songs.html
@@ -9,7 +9,7 @@
     <div id="wrapper">
       <div id="sidenav">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="pics.html">Pics of Me</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="songs.html">Song of the Week</a></li>
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 18: Sweet Life - Frank Ocean
+          Week 19: Boy's a Liar - PinkPantheress
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.8/10</h2>
+            <h2 id="rating">Overall Rating: 7.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/6MEDfjHxnVNcYmHe3mM6L2?si=ce62e374f61b42c4"
+                    href="https://open.spotify.com/track/3NanY0K4okhIQzL33U5Ad8?si=c8dca2c4900c4dd8"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=y14F2RQW7h4"
+                    href="https://www.youtube.com/watch?v=U_hj-wT3biU"
                     target="_blank"
                     ><center>
                       <img
@@ -113,38 +113,26 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Those first five claps before the song starts bring me boundless
-              joy and eagerness for the inbounding masterpiece from one of my
-              favorite artists of all time! I also think the genius of "why see
-              the world, when you got the beach" is an unparalleled line
-              compared to any other hook I've ever heard.
+              For this song, the chorus is really all I need to applaud. The
+              rest of the song is similar in production and vocality. The way
+              she says "liar" in the chorus is fun and flirty as well.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              A 9.8?!?! My second favorite song from Frank Ocean's debut album
-              "Channel Orange" claims the top-rated SotW for now. Of course, I
-              rate it this way with good reason and levelheadedness. Sonically,
-              this song is amazing, yet so is every other song delivered by this
-              amazing record. The lyricism sets this track apart from the rest
-              for me, however. Frank attacks the "Sweet Life", a way of living
-              accessible by only the upper class. He paints the differences
-              between this life and his own through the first notably calmer
-              verse. We then get to the part of the chorus quoted above. "See
-              the world" is a phrase most popularly attributed to traveling,
-              which gives a base-level meaning that there is no need to travel
-              when you are living the "Sweet Life" and will not know of the
-              differences in the world because of it. The phrase could also
-              extend "see" to mean "perceive" or "understand", referring more to
-              a world blindness of the upper class. I could go on and on about
-              this song (I've only talked about the first 1.5 minutes), but
-              ultimately listen to this song and you will understand that the
-              sweet life is not what it's cracked up to be. Find the best song
-              on an album, immerse yourself in your life, and make the best of
-              your week. Until next time.
+              PinkPantheress produces exclusively short bedroom bop tracks that
+              all become quite popular. I have a slight vendetta against the
+              quaintness of her songs; Short songs continue to leave me the
+              slightest bit unsatisfied and I overdo them easily. Luckily, this
+              Sunday tradition has resurfaced at my peak enjoyment of this
+              recent release. The melodic chorus and punchy production do it for
+              me with every listen despite the barely 2-minute runtime. The
+              consistency of this artist amazes me, if you enjoy this song I can
+              almost guarantee the majority of her limited discography will
+              satisfy just the same. Make the best of this pre-winter week.
             </p>
           </div>
         </div>
-        <div id="celebSotW">
+        <div id="celebSotW" hidden>
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
             Dallin Corless: Everything is Embarrassing - Sky Ferreira
@@ -304,6 +292,11 @@
               <td>17</td>
               <td>Could You Be Loved - Bob Marley & The Wailers</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>18</td>
+              <td>Sweet Life - Frank Ocean</td>
+              <td>9.8/10</td>
             </tr>
           </table>
         </div>
