--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <div id="wrapper">
       <div id="sidenav">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="pics.html">Pics of Me</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="songs.html">Song of the Week</a></li>
