--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 19: Boy's a Liar - PinkPantheress
+          Week 20: Open Arms - SZA
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.2/10</h2>
+            <h2 id="rating">Overall Rating: 9.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3NanY0K4okhIQzL33U5Ad8?si=c8dca2c4900c4dd8"
+                    href="https://open.spotify.com/track/0xaFw2zDYf1rIJWl2dXiSF?si=91294f6d9a4348be"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=U_hj-wT3biU"
+                    href="https://www.youtube.com/watch?v=JLd09jmEAYA"
                     target="_blank"
                     ><center>
                       <img
@@ -113,24 +113,53 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              For this song, the chorus is really all I need to applaud. The
-              rest of the song is similar in production and vocality. The way
-              she says "liar" in the chorus is fun and flirty as well.
+              Hearing SZA's late grandmother Norma, presently featured on her
+              sophomore album "Ctrl", breathed a reminiscent and reflective note
+              into this track from the start. Forewords from Norma were featured
+              liberally throughout SZA's highly regarded sophomore album "Ctrl".
+              This is Norma's first and only feature of SZA's latest record.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              PinkPantheress produces exclusively short bedroom bop tracks that
-              all become quite popular. I have a slight vendetta against the
-              quaintness of her songs; Short songs continue to leave me the
-              slightest bit unsatisfied and I overdo them easily. Luckily, this
-              Sunday tradition has resurfaced at my peak enjoyment of this
-              recent release. The melodic chorus and punchy production do it for
-              me with every listen despite the barely 2-minute runtime. The
-              consistency of this artist amazes me, if you enjoy this song I can
-              almost guarantee the majority of her limited discography will
-              satisfy just the same. Make the best of this pre-winter week.
+              In SZA and Travis Scott's fifth collaboration, they tackle the
+              devotion that comes with love. The song is beautiful and
+              meaningful, and they both shine in each of their vocal
+              respectives. I chose this as my SotW for none of these reasons. On
+              my favorite album of all time, "Ctrl", SZA and Travis Scott share
+              a hugely successful hit "Love Galore". This song is a heartfelt
+              antithesis of their massive feature from five years ago. It
+              displays the growth of the duo and connects the two albums in an
+              important display of emotional development (and vocal/autotune
+              development, for Travis).
             </p>
           </div>
+        </div>
+        <div id="celebSotW">
+          <div class="divider"><center></center></div>
+          <h2 style="font-size: 30px" id="title">Album Review</h2>
+          <h2>SOS - SZA</h2>
+          <p id="celebOverall">
+            This week I sat terrified at how a new album after a hiatus of 5
+            years could possibly compete with what I consider the gold-standard
+            of modern R&B records, "Ctrl". SZA answered on Friday with an
+            eclectic diary-like record of ranging emotions over ranging genres
+            with a tracklist nearly doubling her triple platinum sophomore
+            release. SZA diverts the path of expectations in such a grandiose
+            fashion that it is impossible to collate these projects. The
+            constant shifting of moods and genres (and the fact that she does
+            them all so masterfully) keep the hefty 23-song tracklist from
+            becoming monotonous. As expected, her off-the-shoulder songwriting
+            amazes on every track through which she is able to maintain a few
+            common motifs throughout. Her lyrics keep the album from sounding
+            like a collection of randomly produced songs, a fault to which many
+            other experimental albums fall victim. Most have thoughtlessly
+            labeled this album as R&B/Pop due to SZA's past successes in this
+            genre. I now struggle to consider SZA solely an R&B artist and find
+            it completely unjust to slap this common epithet on "SOS". This
+            album displays expansive talent in sonic styles never before heard
+            from SZA and I just hope it can sate me for the time between now and
+            her next project. Thank you.
+          </p>
         </div>
         <div id="celebSotW" hidden>
           <div class="divider"><center>Celebrity Song of the Week</center></div>
@@ -297,6 +326,11 @@
               <td>18</td>
               <td>Sweet Life - Frank Ocean</td>
               <td>9.8/10</td>
+            </tr>
+            <tr>
+              <td>19</td>
+              <td>Boy's a Liar - PinkPantheress</td>
+              <td>7.2/10</td>
             </tr>
           </table>
         </div>
