--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 20: Open Arms - SZA
+          Week 21: Gone Girl - SZA
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.3/10</h2>
+            <h2 id="rating">Overall Rating: 9.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0xaFw2zDYf1rIJWl2dXiSF?si=91294f6d9a4348be"
+                    href="https://open.spotify.com/track/2Sjx8DWZO5zaTyTAmgo2gY?si=ba6286afe7354a20"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=JLd09jmEAYA"
+                    href="https://www.youtube.com/watch?v=_ELILMiYYbI"
                     target="_blank"
                     ><center>
                       <img
@@ -113,24 +113,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Hearing SZA's late grandmother Norma, presently featured on her
-              sophomore album "Ctrl", breathed a reminiscent and reflective note
-              into this track from the start. Forewords from Norma were featured
-              liberally throughout SZA's highly regarded sophomore album "Ctrl".
-              This is Norma's first and only feature of SZA's latest record.
+              The songwriting throughout this track is of SZA's best and remains
+              so enjoyable to sing along to. I very much enjoy the power
+              delivered in the chorus, heightened further by the production
+              switch leading into the final chorus. From this, a soulful
+              crescendo coaxes the song to its end. Wow!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              In SZA and Travis Scott's fifth collaboration, they tackle the
-              devotion that comes with love. The song is beautiful and
-              meaningful, and they both shine in each of their vocal
-              respectives. I chose this as my SotW for none of these reasons. On
-              my favorite album of all time, "Ctrl", SZA and Travis Scott share
-              a hugely successful hit "Love Galore". This song is a heartfelt
-              antithesis of their massive feature from five years ago. It
-              displays the growth of the duo and connects the two albums in an
-              important display of emotional development (and vocal/autotune
-              development, for Travis).
+              After a little more than a week of listening to nothing but SZA's
+              most recent project "SOS", I felt wrong putting any other song as
+              my SotW. "Gone Girl", having the longest runtime out of the
+              23-track album, is most reminiscent of her previous R&B hit
+              project "Ctrl". It has the same earthy, profound production with
+              similar lyricism both in her message and voice. It has grown to be
+              my favorite on the album, after much inner turmoil and with
+              numerous runner-ups. Give this one a few listens while driving if
+              you do that. Make the best of your week! Until the next.
             </p>
           </div>
         </div>
@@ -331,6 +330,11 @@
               <td>19</td>
               <td>Boy's a Liar - PinkPantheress</td>
               <td>7.2/10</td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>Open Arms - SZA</td>
+              <td>9.3/10</td>
             </tr>
           </table>
         </div>
