--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 21: Gone Girl - SZA
+          Week 22: Django - Grant Green
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,7 +32,7 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.6/10</h2>
+            <h2 id="rating">Overall Rating: 7.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=_ELILMiYYbI"
+                    href="https://www.youtube.com/watch?v=bA9qpIB8xQM"
                     target="_blank"
                     ><center>
                       <img
@@ -111,25 +111,26 @@
             </div>
           </div>
           <div class="column">
-            <h2>Fav Part of Song</h2>
-            <p id="favPart">
-              The songwriting throughout this track is of SZA's best and remains
-              so enjoyable to sing along to. I very much enjoy the power
-              delivered in the chorus, heightened further by the production
-              switch leading into the final chorus. From this, a soulful
-              crescendo coaxes the song to its end. Wow!
+            <!-- <h2>Fav Part of Song</h2> -->
+            <p id="favPart" hidden>
+              The "chime-y" nature of this song gives it a holiday feel to me,
+              the very beginning even sounds like "Silent Night" to me. The bass
+              throughout the background of this song is really soothing and easy
+              to listen to in the background while doing just about anything
+              else. If you want to really listen to it though, the brass, piano,
+              and percussion that alternate in the foreground are rather
+              entertaining.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              After a little more than a week of listening to nothing but SZA's
-              most recent project "SOS", I felt wrong putting any other song as
-              my SotW. "Gone Girl", having the longest runtime out of the
-              23-track album, is most reminiscent of her previous R&B hit
-              project "Ctrl". It has the same earthy, profound production with
-              similar lyricism both in her message and voice. It has grown to be
-              my favorite on the album, after much inner turmoil and with
-              numerous runner-ups. Give this one a few listens while driving if
-              you do that. Make the best of your week! Until the next.
+              The "chime-y" nature of this song gives it a holiday feel to me,
+              the very beginning even sounds like "Silent Night" to me. The bass
+              throughout the background of this song is really soothing and easy
+              to listen to in the background while doing just about anything
+              else. If you want to really listen to it though, the brass, piano,
+              and percussion that alternate in the foreground are rather
+              entertaining. Enjoy this song this week alongside your family if
+              you can, and make the best of your week. Happy Holidays!!
             </p>
           </div>
         </div>
@@ -335,6 +336,11 @@
               <td>20</td>
               <td>Open Arms - SZA</td>
               <td>9.3/10</td>
+            </tr>
+            <tr>
+              <td>21</td>
+              <td>Gone Girl - SZA</td>
+              <td>9.6/10</td>
             </tr>
           </table>
         </div>
