--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 22: Django - Grant Green
+          Week 23: Tombola 94 - Dina Ögon
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.0/10</h2>
+            <h2 id="rating">Overall Rating: 8.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2Sjx8DWZO5zaTyTAmgo2gY?si=ba6286afe7354a20"
+                    href="https://open.spotify.com/track/7prx9AfJPjvOMPhmuzgXKI?si=1a258112c4e640e6"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=bA9qpIB8xQM"
+                    href="https://www.youtube.com/watch?v=68PzrZBg1OA"
                     target="_blank"
                     ><center>
                       <img
@@ -111,26 +111,22 @@
             </div>
           </div>
           <div class="column">
-            <!-- <h2>Fav Part of Song</h2> -->
-            <p id="favPart" hidden>
-              The "chime-y" nature of this song gives it a holiday feel to me,
-              the very beginning even sounds like "Silent Night" to me. The bass
-              throughout the background of this song is really soothing and easy
-              to listen to in the background while doing just about anything
-              else. If you want to really listen to it though, the brass, piano,
-              and percussion that alternate in the foreground are rather
-              entertaining.
+            <h2>Fav Part of Song</h2>
+            <p id="favPart">
+              The repeating two-word chorus with, which this track shares it's
+              title, has taken residency in the back of my mind this week. It
+              says "tombola nittio­fyra", which possibly translates from Swedish
+              to "raffle 94" in English, although I'm not fully convinced of the
+              accuracy of that translation.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              The "chime-y" nature of this song gives it a holiday feel to me,
-              the very beginning even sounds like "Silent Night" to me. The bass
-              throughout the background of this song is really soothing and easy
-              to listen to in the background while doing just about anything
-              else. If you want to really listen to it though, the brass, piano,
-              and percussion that alternate in the foreground are rather
-              entertaining. Enjoy this song this week alongside your family if
-              you can, and make the best of your week. Happy Holidays!!
+              To keep with the jazz-inspired picks for SotW, this week is a
+              selection from Dina Ögon's self-titled, jazz-funk, debut project.
+              The melody of "Tombola 94" is reminiscent of those found within
+              any Bee Gees track; It is laden with choppy electric riffs which
+              only add to the 70's feel. Listen to this song in the sun if you
+              can and make the best of your week!
             </p>
           </div>
         </div>
@@ -341,6 +337,11 @@
               <td>21</td>
               <td>Gone Girl - SZA</td>
               <td>9.6/10</td>
+            </tr>
+            <tr>
+              <td>22</td>
+              <td>Django - Grant Green</td>
+              <td>7.0/10</td>
             </tr>
           </table>
         </div>
