--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 23: Tombola 94 - Dina Ögon
+          Week 24: Hope - Blood Orange
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.2/10</h2>
+            <h2 id="rating">Overall Rating: 7.9/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7prx9AfJPjvOMPhmuzgXKI?si=1a258112c4e640e6"
+                    href="https://open.spotify.com/track/2QLNDKL7hZyh2OZ8UL9WrV?si=905d72e4c2f64d13"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=68PzrZBg1OA"
+                    href="https://www.youtube.com/watch?v=kxt98d7XlJc"
                     target="_blank"
                     ><center>
                       <img
@@ -113,20 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The repeating two-word chorus with, which this track shares it's
-              title, has taken residency in the back of my mind this week. It
-              says "tombola nittio­fyra", which possibly translates from Swedish
-              to "raffle 94" in English, although I'm not fully convinced of the
-              accuracy of that translation.
+              The sporadic piano that consists through this track opens up at
+              the end in its own solo as Blood Orange, Diddy, and Tei Shi
+              flip-flop their own vocals. It brings a calm and enjoyable finish
+              to a rather upbeat song.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              To keep with the jazz-inspired picks for SotW, this week is a
-              selection from Dina Ögon's self-titled, jazz-funk, debut project.
-              The melody of "Tombola 94" is reminiscent of those found within
-              any Bee Gees track; It is laden with choppy electric riffs which
-              only add to the 70's feel. Listen to this song in the sun if you
-              can and make the best of your week!
+              Blood Orange, real name of Devonté Hynes, released a project
+              called "Negro Swan" in 2018. This track is not a standout in any
+              way, there are multitudes of quality songs on this release
+              spanning many different genres and sounds. I'm into this
+              production currently, I really enjoy the alternative R&B sound of
+              it specifically. The features all meld together perfectly and
+              create a relaxing yet attention-grabbing sound. Give this one a
+              listen and make the best of your week!
             </p>
           </div>
         </div>
@@ -342,6 +343,11 @@
               <td>22</td>
               <td>Django - Grant Green</td>
               <td>7.0/10</td>
+            </tr>
+            <tr>
+              <td>23</td>
+              <td>Tombola 94 - Dina Ögon</td>
+              <td>8.2/10</td>
             </tr>
           </table>
         </div>
